...
                        <action selector="onDetailClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="ZVH-e7-fDE"/>
                    </connections>
                </button>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="91j-Xg-pAd">
                    <rect key="frame" x="100" y="14" width="46" height="30"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <state key="normal" title="Button"/>
                </button>
            </subviews>
            <color key="backgroundColor" red="0.96078431369999995" green="0.65098039220000004" blue="0.13725490200000001" alpha="1" colorSpace="calibratedRGB"/>
            <accessibility key="accessibilityConfiguration" identifier="messagedetailview"/>
            <nil key="simulatedStatusBarMetrics"/>
            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
            <connections>
                <outlet property="ibImageAvatar" destination="eV1-oE-Qje" id="r53-bf-xn1"/>
                <outlet property="ibLabelMessage" destination="emE-MN-AIA" id="dug-gT-N6t"/>
            </connections>
...
