...
                        <viewControllerLayoutGuide type="bottom" id="mqb-SW-UoY"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ahe-jc-sGP">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="sendgift" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fA1-n4-BYU">
                                <rect key="frame" x="276" y="285" width="49" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="sendgift"/>
                                <state key="normal" title="jamsvg"/>
                                <connections>
                                    <action selector="onGiftBtnClick:" destination="PeC-A0-1yf" eventType="touchUpInside" id="wAf-p8-Rch"/>
                                </connections>
...
